@@ -1,3 +1,7 @@
+2015-10-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* src/luafflib.c: Import patch for issue 730 by Hans.
+
 2015-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* fontforge/fontforge/splinefont.h.
